src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-201.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units case=L\")"
---
items:
  - loc: "#units case=L"
    locs:
      directive: "#units"
    options:
      - conversion: Lower
        loc: case=L
        locs:
          conversion: L
          option: case
        option: StationNameCase
    type: UnitsDirective
