src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-202.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units case=lower\")"
---
items:
  - loc: "#units case=lower"
    locs:
      directive: "#units"
    options:
      - conversion: Lower
        loc: case=lower
        locs:
          conversion: lower
          option: case
        option: StationNameCase
    type: UnitsDirective
