src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-203.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units case=u\")"
---
items:
  - loc: "#units case=u"
    locs:
      directive: "#units"
    options:
      - conversion: Upper
        loc: case=u
        locs:
          conversion: u
          option: case
        option: StationNameCase
    type: UnitsDirective
