src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-205.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units case=upper\")"
---
items:
  - loc: "#units case=upper"
    locs:
      directive: "#units"
    options:
      - conversion: Upper
        loc: case=upper
        locs:
          conversion: upper
          option: case
        option: StationNameCase
    type: UnitsDirective
