src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-206.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units case=m\")"
---
items:
  - loc: "#units case=m"
    locs:
      directive: "#units"
    options:
      - conversion: Mixed
        loc: case=m
        locs:
          conversion: m
          option: case
        option: StationNameCase
    type: UnitsDirective
