src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-207.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units case=M\")"
---
items:
  - loc: "#units case=M"
    locs:
      directive: "#units"
    options:
      - conversion: Mixed
        loc: case=M
        locs:
          conversion: M
          option: case
        option: StationNameCase
    type: UnitsDirective
