src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-208.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units case=Mixed\")"
---
items:
  - loc: "#units case=Mixed"
    locs:
      directive: "#units"
    options:
      - conversion: Mixed
        loc: case=Mixed
        locs:
          conversion: Mixed
          option: case
        option: StationNameCase
    type: UnitsDirective
