src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-210.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units tape\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units tape"
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: tape
              option: TapingMethod
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing =
    severity: Error
